# openmm-jax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
examples/: benchmark_water.py  phenol_rdf.py
models/: __init__.py  aceff.py  aceff_v1.1.eqx  aceff_v2.0.eqx  aceffpotential.py  aceffpotential_pythonforce.py  aimnet2.py  aimnet2potential.py  aimnet2potential_pythonforce.py  ani.py  anipotential.py  anipotential_pythonforce.py  anixpotential.py  fennixpotential.py  fennixpotential_pythonforce.py  mace.py  macepotential.py  macepotential_pythonforce.py  orb.py  orbpotential.py  orbpotential_pythonforce.py  so3lr.eqx  so3lr.py  so3lrpotential.py  so3lrpotential_pythonforce.py
openmmapi/include/: JaxForce.h  JaxKernels.h
openmmapi/include/internal/: JaxBase64.h  JaxForceImpl.h
openmmapi/src/: JaxForce.cpp  JaxForceImpl.cpp
python/: CMakeLists.txt  JaxPluginWrapper.cpp  openmmjax.i  openmmjax.py  openmmjax_export.py
serialization/include/: JaxForceProxy.h
serialization/src/: JaxForceProxy.cpp  JaxSerializationProxyRegistration.cpp
test/: TestAIMNet2Potential.py  TestANIPotential.py  TestAceFFPotential.py  TestFeNNixPotential.py  TestMACEPotential.py  TestORBPotential.py  TestSO3LRPotential.py
test/data/: aceff_energies.py  aimnet2_energies.py  ani_energies.py  fennix_energies.py  mace_energies.py  orb_energies.py  so3lr_energies.py
