SET(OPENMM_JAX_VERSION 0.1 CACHE STRING "The version of OpenMM-JAX that will be built." FORCE)

CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(OpenMMJax)

SET(OPENMM_DIR "/usr/local/openmm" CACHE PATH "Where OpenMM is installed")
INCLUDE_DIRECTORIES("${OPENMM_DIR}/include")
LINK_DIRECTORIES("${OPENMM_DIR}/lib" "${OPENMM_DIR}/lib/plugins")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(APPLE)
    SET(CMAKE_INSTALL_NAME_DIR "@rpath")
    SET(EXTRA_COMPILE_FLAGS "-stdlib=libc++")
ENDIF()

IF(WIN32)
    SET(EXTRA_COMPILE_FLAGS "-DNOMINMAX")
ENDIF()

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET(CMAKE_INSTALL_PREFIX "${OPENMM_DIR}" CACHE PATH "Where to install the plugin" FORCE)
ENDIF()

IF(NOT EXECUTABLE_OUTPUT_PATH)
    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR} CACHE INTERNAL "Single output directory for executables.")
ENDIF()
IF(NOT LIBRARY_OUTPUT_PATH)
    SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR} CACHE INTERNAL "Single output directory for libraries.")
ENDIF()

SET(JAX_PLUGIN_SOURCE_SUBDIRS openmmapi serialization)
SET(JAX_LIBRARY_NAME OpenMMJax)
SET(SHARED_JAX_TARGET ${JAX_LIBRARY_NAME})

SET(API_INCLUDE_DIRS "openmmapi/include" "openmmapi/include/internal" "serialization/include")
SET(API_INCLUDE_FILES)
FOREACH(dir ${API_INCLUDE_DIRS})
    FILE(GLOB fullpaths ${dir}/*.h)
    SET(API_INCLUDE_FILES ${API_INCLUDE_FILES} ${fullpaths})
ENDFOREACH()

SET(SOURCE_FILES)
SET(SOURCE_INCLUDE_FILES)
FOREACH(subdir ${JAX_PLUGIN_SOURCE_SUBDIRS})
    FILE(GLOB src_files ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*.cpp)
    FILE(GLOB incl_files ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/src/*.h)
    SET(SOURCE_FILES ${SOURCE_FILES} ${src_files})
    SET(SOURCE_INCLUDE_FILES ${SOURCE_INCLUDE_FILES} ${incl_files})
    INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/include)
ENDFOREACH()

ADD_LIBRARY(${SHARED_JAX_TARGET} SHARED ${SOURCE_FILES} ${SOURCE_INCLUDE_FILES} ${API_INCLUDE_FILES})
SET_TARGET_PROPERTIES(${SHARED_JAX_TARGET}
    PROPERTIES COMPILE_FLAGS "${EXTRA_COMPILE_FLAGS}"
    LINK_FLAGS "${EXTRA_COMPILE_FLAGS}"
    BUILD_RPATH "$ORIGIN"
    INSTALL_RPATH "$ORIGIN")
TARGET_LINK_LIBRARIES(${SHARED_JAX_TARGET} OpenMM)
INSTALL(TARGETS ${SHARED_JAX_TARGET} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)

FILE(GLOB API_ONLY_INCLUDE_FILES "openmmapi/include/*.h")
INSTALL(FILES ${API_ONLY_INCLUDE_FILES} DESTINATION include)
FILE(GLOB API_ONLY_INCLUDE_FILES_INTERNAL "openmmapi/include/internal/*.h")
INSTALL(FILES ${API_ONLY_INCLUDE_FILES_INTERNAL} DESTINATION include/internal)
FILE(GLOB SERIALIZATION_INCLUDE_FILES "serialization/include/*.h")
INSTALL(FILES ${SERIALIZATION_INCLUDE_FILES} DESTINATION include)

FIND_PACKAGE(CUDA QUIET)
SET(JAX_BUILD_CUDA_LIB ON CACHE BOOL "Build the CUDA platform plugin")
IF(JAX_BUILD_CUDA_LIB)
    IF(CUDA_FOUND AND CUDA_CUDA_LIBRARY)
        MESSAGE(STATUS "Building CUDA platform plugin")
        ADD_SUBDIRECTORY(platforms/cuda)
    ELSE()
        MESSAGE(WARNING "CUDA toolkit or driver library not found; not building CUDA platform plugin")
    ENDIF()
ENDIF()

FIND_PROGRAM(PYTHON_EXECUTABLE python)
FIND_PROGRAM(SWIG_EXECUTABLE swig)
IF(PYTHON_EXECUTABLE AND SWIG_EXECUTABLE)
    SET(JAX_BUILD_PYTHON_WRAPPERS ON CACHE BOOL "Build wrappers for Python")
ELSE()
    SET(JAX_BUILD_PYTHON_WRAPPERS OFF CACHE BOOL "Build wrappers for Python")
ENDIF()
IF(JAX_BUILD_PYTHON_WRAPPERS)
    ADD_SUBDIRECTORY(python)
ENDIF()
