[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99
target-version = "py311"
extend-exclude = [
    "build",
    "phenol_rdf_*",
    "python/openmmjax.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
python_files = ["Test*.py"]
